objects/RPS_Associated_Individual__c.object
<CustomObject>
    <description>Custom object to hold Contacts of an Account, child of Account object, also serves as the junction object between the Account and Contact objects, allowing a Contact to be linked to multiple Accounts, for RPS [US102]</description>
    <fields>
        <fullName>RPS_Account__c</fullName>
        <description>Custom master-detail lookup field to link the RPS Associated Individual to its parent Account, for RPS [US102]</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Associated Individuals</relationshipLabel>
        <relationshipName>RPS_Associated_Individuals_Account</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RPS_Active__c</fullName>
        <description>Custom formula checkbox to serve as an indicator if the contact&apos;s association is active or not, based on specified start and end dates, for RPS [US102]</description>
        <formula>AND
(
    RPS_Start_Date__c &lt;= TODAY(), 
    OR
    (
        ISBLANK(RPS_End_Date__c), 
        RPS_End_Date__c &gt; TODAY()
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Broker_Dealer_Firm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Custom Account lookup field to link the Associated Individual to the Broker/Dealer, for RPS</description>
        <label>Broker/Dealer Firm</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Associated Individuals (Broker/Dealer Firm)</relationshipLabel>
        <relationshipName>RPS_Associated_Individuals_Broker_Dealer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RPS_Contact_Role__c</fullName>
        <description>Custom picklist field to denote the contact&apos;s association type to the account, for RPS [US102]</description>
        <label>Contact Role</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>RPS_Contact_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Producer</fullName>
                </value>
                <value>
                    <fullName>RIA</fullName>
                </value>
                <value>
                    <fullName>Advisor Firm Administrative Assistant</fullName>
                </value>
                <value>
                    <fullName>Advisor Firm Business Contact</fullName>
                </value>
                <value>
                    <fullName>Advisor Firm External Wholesaler (Influencer)</fullName>
                </value>
                <value>
                    <fullName>Advisor Firm Investment Analyst</fullName>
                </value>
                <value>
                    <fullName>Advisor Firm Plan Consultant</fullName>
                </value>
                <value>
                    <fullName>Advisor Firm Relationship Manager</fullName>
                </value>
                <value>
                    <fullName>Advisor Firm RFP Analyst</fullName>
                </value>
                <value>
                    <fullName>Auditor CPA</fullName>
                </value>
                <value>
                    <fullName>Competitor Contact</fullName>
                </value>
                <value>
                    <fullName>ERISA Attorney</fullName>
                </value>
                <value>
                    <fullName>Fund Partner Analyst Contact</fullName>
                </value>
                <value>
                    <fullName>Fund Partner External Wholesaler</fullName>
                </value>
                <value>
                    <fullName>Fund Partner National Accounts Contact</fullName>
                </value>
                <value>
                    <fullName>Fund Partner Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Payroll Provider General Contact</fullName>
                </value>
                <value>
                    <fullName>Payroll Provider-Primary Contact (DB)</fullName>
                </value>
                <value>
                    <fullName>Payroll Provider-Primary Contact (DC)</fullName>
                </value>
                <value>
                    <fullName>Payroll Provider-Primary Contact (NQ)</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor Administrative Fiduciary</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor Administrator</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor Committee Member</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor Compliance Contact</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor Consultant</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor Day to Day Admin</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor Executive</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor General Contact</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor Investment Contact</fullName>
                </value>
                <value>
                    <fullName>Plan Sponsor Investment Fiduciary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Contact_Type__c</fullName>
        <description>Custom picklist to denote the type of individual&apos;s association to the account, for RPS</description>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advisor</fullName>
                </value>
                <value>
                    <fullName>Business Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Contact__c</fullName>
        <description>Custom master-detail lookup field to link the RPS Associated Individual to its Contact record [US102]</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Associated Roles</relationshipLabel>
        <relationshipName>RPS_Associated_Individuals_Contact</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RPS_Elite_Advisor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Custom checkbox to note if the Associated Individual is an Elite Advisor for the selected Account, for RPS [US257]</description>
        <label>Elite Advisor?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Email_Address__c</fullName>
        <description>Custom email field to store an Associated Individual&apos;s Email Address, for RPS</description>
        <externalId>true</externalId>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RPS_End_Date__c</fullName>
        <description>Custom date field to hold the end date of the contact&apos;s association to the account, for RPS [US102]</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RPS_Enterprise_Total_AUM__c</fullName>
        <description>Custom currency field to denote an Associated Individual&apos;s total Assets Under Management value for Enterprise, for RPS</description>
        <label>Enterprise Total AUM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RPS_External_Associated_Individual_ID__c</fullName>
        <description>This field is added by Srini on 7/14/2016 as requested by Prabhu Balakrishnan (Prabhu_Balakrishnan@manulife.com) for initial data load activities</description>
        <externalId>true</externalId>
        <label>RPS External Associated Individual ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RPS_GA_Total_AUM__c</fullName>
        <description>Custom currency field to denote an Associated Individual&apos;s total Assets Under Management value for Signature, for RPS</description>
        <label>Signature Total AUM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RPS_Grandparent_Value__c</fullName>
        <description>Custom formula field to show the Account Name of the Account&apos;s Grandparent, for RPS</description>
        <formula>RPS_Account__r.Parent.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grandparent Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_ID__c</fullName>
        <description>Custom formula field to display the Associated Individual ID for related lists, for RPS</description>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id , Name, &quot;_parent&quot;)</formula>
        <label>ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_Key_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Custom checkbox to denote if this contact is a key contact with respect to the associated account, for RPS [US102]</description>
        <label>Key Contact?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Mailing_City__c</fullName>
        <description>Custom text field to store an Associated Individual&apos;s Mailing City, for RPS</description>
        <label>Mailing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_Mailing_Geolocation__c</fullName>
        <description>Custom Geolocation field to store the geolocation information of the Associated Individual&apos;s Mailing Address, for RPS</description>
        <label>Mailing Geolocation</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>RPS_Mailing_Street__c</fullName>
        <description>Custom text area field to store an Associated Individual&apos;s Mailing Street, for RPS</description>
        <label>Mailing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Mailing_Zip_Postal_Code__c</fullName>
        <description>Custom text field to store an Associated Individual&apos;s Mailing Zip/Postal Code, for RPS</description>
        <label>Mailing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_Parent_Value__c</fullName>
        <description>Custom formula field to show the name of the Account&apos;s Parent, for RPS</description>
        <formula>RPS_Account__r.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_Phone__c</fullName>
        <description>Custom phone field to store an Associated Individual&apos;s Phone, for RPS</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RPS_Primary_Message__c</fullName>
        <formula>IF( RPS_Primary__c , &quot;Kindly edit this association from the Contact page instead.&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Custom checklist to denote if this association represents the contact&apos;s primary association to the account, for RPS</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Referenceable_Effective_Date__c</fullName>
        <description>Custom date field to set the effective date of the Referenceable field, for RPS</description>
        <label>Referenceable Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RPS_Start_Date__c</fullName>
        <description>Custom date field to hold the start date of the contact&apos;s association to the account, for RPS [US102]</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RPS_TRS_Total_AUM__c</fullName>
        <description>Custom currency field to denote an Associated Individual&apos;s total Assets Under Management value for TRS, for RPS</description>
        <label>TRS Total AUM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RPS_Total_AUM_As_Of_Date__c</fullName>
        <description>Custom date field to denote the effective date of an Associated Individual&apos;s Total Assets Under Management value, for RPS</description>
        <label>Total AUM As Of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RPS_Total_AUM__c</fullName>
        <description>Custom currency field to denote an Associated Individual&apos;s total Assets Under Management value, for RPS</description>
        <label>Total AUM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Associated Individual</label>
    <listViews>
        <fullName>RPS_All_Associated_Individuals</fullName>
        <columns>NAME</columns>
        <columns>RPS_Account__c</columns>
        <columns>RPS_Contact__c</columns>
        <columns>RPS_Contact_Type__c</columns>
        <columns>RPS_Contact_Role__c</columns>
        <columns>RPS_Primary__c</columns>
        <columns>RPS_Key_Contact__c</columns>
        <columns>RPS_Elite_Advisor__c</columns>
        <columns>RPS_Start_Date__c</columns>
        <columns>RPS_End_Date__c</columns>
        <columns>RPS_Active__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Associated Individuals</label>
    </listViews>
    <nameField>
        <displayFormat>ASIND-{0000000}</displayFormat>
        <label>Associated Individual ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associated Individuals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>